# imu-visualization

./: .gitignore  .pre-commit-config.yaml  README.md  app.js  client.html  devenv.nix  devenv.yaml  package-lock.json  package.json
app/: .gitignore  attitudeEstimates.ts  example-server.ts  package.json  webpack.config.js
app/src/: app.ts  index.html  styles.css
arduino/: mpu9250.ino
estimation/: Cargo.toml
estimation/src/: complementary.rs  ekf.rs  lib.rs  madgwick.rs  main.rs
estimation/test/: raw_imu_data.csv
js/: renderCube.js
mpu9250/: mpu9250.ino
