[package]
name = "imu-filters"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
futures-util = {version = "0.3.31", features = ["sink"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
num-traits = "0.2.19"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serialport = "4.6.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-tungstenite = "0.24.0"
